[gd_scene load_steps=42 format=2]

[ext_resource path="res://Sprites/Melee/Lance.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Melee/Spear.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Melee/Stick.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Melee/Dagger.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Melee/Sword.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Melee/Axe.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Melee/Pipe.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Melee/BigSword.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Melee_weapon.gd" type="Script" id=9]
[ext_resource path="res://Sprites/Melee/Hammer.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Melee/Pitchfork.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Axe left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -65.5, -205.8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Axe:flip_v")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -121.6, 18.7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Axe:flip_v")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "BigSword left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -112.2, -190.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "BigSword right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -68.0, 10.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Dagger left"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3, 5 ), Vector2( -11, 5 ), Vector2( -3, 5 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Dagger right"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 5 ), Vector2( 12, 5 ), Vector2( 4, 5 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Hammer left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 40.0, -129.3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Hammer right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -26.4, 123.3 ]
}

[sub_resource type="Animation" id=9]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -5, 5 ), Vector2( -11, 5 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 5 ), Vector2( 12, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -119.9, -213.4 ]
}

[sub_resource type="Animation" id=12]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -60.0, 30.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Pitchfork left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -3, 5 ), Vector2( -11, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "Pitchfork right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 5 ), Vector2( 12, 5 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -3, 5 ), Vector2( -13, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=16]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 5 ), Vector2( 14, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=17]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -120.0, -210.0 ]
}

[sub_resource type="Animation" id=18]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -60.0, 30.0 ]
}

[sub_resource type="Animation" id=19]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -120.0, -213.5 ]
}

[sub_resource type="Animation" id=20]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -50.0, 30.0 ]
}

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 22, 5, 25, 0, 22, -5.5 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 0, 4, 35, 4, 47, 0, 35, -4, 0, -4 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( -5, -4, 11, 0, -5, 4 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( -15, 0, -10, -7, 40, 0, -10, 7 )

[sub_resource type="CapsuleShape2D" id=25]
radius = 2.42977

[sub_resource type="CapsuleShape2D" id=26]
radius = 3.34965
height = 22.5885

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 20.7527, 2.70565 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 0, 3, 26, 3, 32, 0, 26, -3, 0, -3 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 6.5, 10.1929 )

[sub_resource type="CapsuleShape2D" id=30]
radius = 7.39639
height = 11.3393

[node name="Melee_weapon" type="Area2D"]
position = Vector2( -5, 5 )
rotation = -1.14319
scale = Vector2( 0.7, 0.7 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Axe left" = SubResource( 1 )
"anims/Axe right" = SubResource( 2 )
"anims/BigSword left" = SubResource( 3 )
"anims/BigSword right" = SubResource( 4 )
"anims/Dagger left" = SubResource( 5 )
"anims/Dagger right" = SubResource( 6 )
"anims/Hammer left" = SubResource( 7 )
"anims/Hammer right" = SubResource( 8 )
"anims/Lance left" = SubResource( 9 )
"anims/Lance right" = SubResource( 10 )
"anims/Pipe left" = SubResource( 11 )
"anims/Pipe right" = SubResource( 12 )
"anims/Pitchfork left" = SubResource( 13 )
"anims/Pitchfork right" = SubResource( 14 )
"anims/Spear left" = SubResource( 15 )
"anims/Spear right" = SubResource( 16 )
"anims/Stick left" = SubResource( 17 )
"anims/Stick right" = SubResource( 18 )
"anims/Sword left" = SubResource( 19 )
"anims/Sword right" = SubResource( 20 )

[node name="Axe" type="Sprite" parent="."]
visible = false
position = Vector2( 11.7235, 0 )
texture = ExtResource( 6 )
flip_v = true

[node name="BigSword" type="Sprite" parent="."]
visible = false
position = Vector2( 23.5517, -0.209347 )
texture = ExtResource( 8 )

[node name="Dagger" type="Sprite" parent="."]
visible = false
position = Vector2( 0.628044, 0.628044 )
texture = ExtResource( 4 )

[node name="Lance" type="Sprite" parent="."]
visible = false
position = Vector2( 9.83938, 0 )
texture = ExtResource( 1 )

[node name="Pipe" type="Sprite" parent="."]
visible = false
position = Vector2( 9.7347, -5.96046e-08 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Stick" type="Sprite" parent="."]
visible = false
position = Vector2( 13.0843, -1.15141 )
texture = ExtResource( 3 )

[node name="Spear" type="Sprite" parent="."]
visible = false
position = Vector2( 8.58328, -0.104675 )
texture = ExtResource( 2 )

[node name="Sword" type="Sprite" parent="."]
visible = false
position = Vector2( 14.3404, 1.36076 )
texture = ExtResource( 5 )

[node name="Hammer" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -9 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 10 )

[node name="Pitchfork" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 11 )

[node name="AxeHitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 21 )

[node name="BigSwordHitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 22 )

[node name="DaggerHitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 23 )

[node name="LanceHitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 24 )

[node name="PipeHitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 10, 0 )
rotation = 1.5708
shape = SubResource( 25 )

[node name="StickHitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 11, 0 )
rotation = 1.5708
shape = SubResource( 26 )

[node name="SpearHitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 12, 0 )
shape = SubResource( 27 )

[node name="SwordHitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 28 )

[node name="HammerHitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -9 )
shape = SubResource( 29 )

[node name="PitchforkHitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -2 )
shape = SubResource( 30 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
